# web_vision_pro

./: .dockerignore  .gitignore  AGENTS.md  CMakeLists.txt  README-docker-backup.md  docker-build-run.sh  docker-image-manager.sh  docker-rebuild-app.sh  monitor_memory.sh  opencode.json  reorganize_buttons.py  resources.qrc  revert_buttons.py
.agent/workflows/: docker-run-emulated.md
.docker/: Dockerfile  docker-compose.emulated.yml  docker-compose.yml
dashboard/: analytics.html  index.html
scripts/: optimize_nic.sh  run_pylonviewer.sh  setup_env.sh  setup_network.sh
src/: main.cpp
src/communication/: WebsocketServer.cpp  WebsocketServer.h
src/config/: CameraConfig.cpp  CameraConfig.h
src/core/: BufferPool.h  CameraManager.cpp  CameraManager.h  EventController.cpp  EventController.h  EventDatabase.cpp  EventDatabase.h  RawFormat.h  TemperatureStatus.h  VideoStreamReader.cpp  VideoStreamReader.h
src/gui/: AnalysisView.cpp  AnalysisView.h  CameraInfo.h  ConfigDialog.cpp  ConfigDialog.h  DetailView.cpp  DetailView.h  LiveDashboard.cpp  LiveDashboard.h  MainWindow.cpp  MainWindow.h
src/gui/widgets/: AnalysisVideoWidget.cpp  AnalysisVideoWidget.h  CameraCard.cpp  CameraCard.h  CameraDeviceSettingsDialog.cpp  CameraDeviceSettingsDialog.h  CameraWidget.cpp  CameraWidget.h  DeleteConfirmationDialog.cpp  DeleteConfirmationDialog.h  IconManager.cpp  IconManager.h  NetworkSummaryHeader.cpp  NetworkSummaryHeader.h  ToggleSwitch.cpp  ToggleSwitch.h
src/processing/: DefectDetector.cpp  DefectDetector.h  ImageBuffer.cpp  ImageBuffer.h  VideoEncoder.cpp  VideoEncoder.h
